# tictactoe-rust

./: Cargo.toml  Makefile  PKGBUILD  README.md  input.txt  tictactoe-rust
.ideas/: TODO.md  interface.md
src/: lib.rs  main.rs
src/ai/: mod.rs  tests.rs
src/board/: mod.rs  tests.rs
src/game/: mod.rs  tests.rs
src/interface/: mod.rs  tests.rs
